config/tinysystems/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-service
  labels:
    app.kubernetes.io/component: manager
spec:
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: deployment
    app.kubernetes.io/instance: controller-manager
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
