config/tinysystems/manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manager-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: manager-service
      port:
        number: 80
  rules: []
